k8sinitiative_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: damian-k8s-initiative
  labels:
    name: damian-k8s-initiative
