curl_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  namespace: damian-k8s-initiative
spec:
  selector:
    matchLabels:
      app: curlpod
  replicas: 1
  template:
    metadata:
      labels:
        app: curlpod
    spec:
      containers:
        - name: curlpod
          image: radial/busyboxplus:curl
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 10;done"]
