web-server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
  namespace: damian-k8s-initiative
spec:
  selector:
    matchLabels:
      app: web-server
  replicas: 1
  template:
    metadata:
      labels:
        app: web-server
    spec:
      serviceAccountName: products-admin
      namespace: damian-k8s-initiative
      containers:
        - name: web-server
          image: damianpm/go-fetch-products:latest
          ports:
            - containerPort: 8080
