web-server_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-server
  namespace: damian-k8s-initiative
spec:
  host: damian-k8s-initiative.apps.dev-eng-ocp4-5.dev.3sca.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: web-server
    weight: 100
